--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CookBook3"
         tools:targetApi="31">
         <activity
-            android:name=".RecipeActivity"
+            android:name=".CategoryPage"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
