Added RecipeListPage code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".RecipeListPage"
             android:exported="false" />
         <activity
+            android:name=".RecipePage"
+            android:exported="false" />
+        <activity
             android:name=".CategoryPage"
             android:exported="false" />
         <activity
